--- a/style.css
+++ b/style.css
@@ -152,3 +152,36 @@ footer a:hover {
     color:  rgba(0, 255, 255, 0.562);
 }
 
+#about{
+    padding: 80px 0;
+    color: #333;
+}
+.row{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.about-col-1{
+    flex-basis: 35%;
+}
+.about-col-1 img{
+    width: 100%;
+    border-radius: 15px;
+    margin-left: 30px;
+    box-shadow: 0 0 20px rgba(0, 255, 255, 0.562);
+
+    
+
+}
+.about-col-2{
+    flex-basis: 60%;
+}
+
+.sub-title{
+    font-size: 30px;
+    font-weight: 300;
+    color: #333;
+}
+
+
